--- a/src/routes/MortgageForm/style.css
+++ b/src/routes/MortgageForm/style.css
@@ -7,11 +7,82 @@
 }
 
 .bankContainer {
-  display: inline-flex;
+  display: flex;
+  flex-wrap: wrap;
   width: 100%;
   justify-content: flex-start;
   padding-left: 2rem;
+  margin-bottom: 1rem;
 }
 
 .textField {
+  flex: 0 1 33%;
+  margin-bottom: 1rem;
+}
+
+.loader { 
+    position: relative; 
+    width: calc(12px * 3 + 8px);
+    height: 8px; 
+    margin: 12px auto; 
+}
+
+.dot {
+    display: inline-block;
+    width: 8px;
+    height: 8px;
+    border-radius: 100%;
+    background: #ccc;
+    position: absolute;
+}
+
+.dot_1 {
+    animation: animateDot1 1.5s linear infinite;
+    left: 12px;
+    background: #00B4CE; 
+}
+
+.dot_2 {
+    animation: animateDot2 1.5s linear infinite;
+    animation-delay: 1.5s / 3;
+    left: 12px * 2;
+}
+
+.dot_3 {
+    animation: animateDot3 1.5s linear infinite;
+    left: 12px;
+}
+
+.dot_4 {
+    animation: animateDot4 1.5s linear infinite;
+    animation-delay: 1.5s / 3;
+    left: 12px * 2;
+}
+
+@keyframes animateDot1 {
+    0%{ transform: rotate(0deg) translateX(-12px); }
+    25% { transform: rotate(180deg) translateX(-12px); }
+    75% { transform: rotate(180deg) translateX(-12px); }
+    100% { transform: rotate(360deg) translateX(-12px); }
+}
+
+@keyframes animateDot2 {
+    0%{ transform: rotate(-0deg) translateX(-12px); }
+    25% { transform: rotate(-180deg) translateX(-12px); }
+    75% { transform: rotate(-180deg) translateX(-12px); }
+    100% { transform: rotate(-360deg) translateX(-12px); }
+}
+
+@keyframes animateDot3 {
+    0%{ transform: rotate(0deg) translateX(12px); }
+    25% { transform: rotate(180deg) translateX(12px); }
+    75% { transform: rotate(180deg) translateX(12px); }
+    100% { transform: rotate(360deg) translateX(12px); }
+}
+
+@keyframes animateDot4 {
+    0%{ transform: rotate(-0deg) translateX(12px); }
+    25% { transform: rotate(-180deg) translateX(12px); }
+    75% { transform: rotate(-180deg) translateX(12px); }
+    100% { transform: rotate(-360deg) translateX(12px); }
 }
